fix(ui/ripple): 水波纹会自行设置容器的 overflow position zIndex 并在波纹结束时进行还原
affects: @varlet/ui

--- a/packages/varlet-ui/src/checkbox/checkbox.less
+++ b/packages/varlet-ui/src/checkbox/checkbox.less
@@ -9,8 +9,6 @@
 	align-items: center;
 
 	&__action {
-		position: relative;
-		overflow: hidden;
 		display: flex;
 		justify-content: center;
 		align-items: center;
