--- a/packages/varlet-ui/src/ripple/ripple.less
+++ b/packages/varlet-ui/src/ripple/ripple.less
@@ -1,16 +1,10 @@
-.var {
-  &-ripple {
-    position: absolute;
-    transition: all .3s cubic-bezier(0.4, 0, 0.2, 1);
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    opacity: 0;
-    will-change: transform, opacity;
-    pointer-events: none;
-
-    &--flat {
-      z-index: 1;
-    }
-  }
+.var-ripple {
+	position: absolute;
+	transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+	top: 0;
+	left: 0;
+	border-radius: 50%;
+	opacity: 0;
+	will-change: transform, opacity;
+	pointer-events: none;
 }
